--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>KotlinReact</title>
-    <script src="KotlinReact.js"></script>
+    <title>foo</title>
 </head>
 <body>
-
+<div id="root">
+    loading javascript...
+</div>
+<script src="KotlinReact.js"></script>
 </body>
 </html>
